# ameya

./: .gitignore  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
plans/: Linear对象工作台UX-M1实施计划.md  Linear对象工作台UX设计.md  Tauri-Vue-Windows开发路线图.md  productization-ai-job-queue.md  productization-ai-settings.md  productization-claude-cli-provider.md  productization-cli-runner.md  productization-codex-cli-provider.md  productization-openai-provider.md  productization-prompt-template-management.md  stage-context.md  世界观人设工具功能架构设计.md
scripts/: build-windows.ps1
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_init.sql  0002_ai_job_queue.sql
src-tauri/src/: lib.rs  main.rs  test_support.rs
src-tauri/src/ai/: claude_cli.rs  cli_provider.rs  codex_cli.rs  mod.rs  openai_compatible.rs  process_runner.rs  settings.rs
src-tauri/src/commands/: ai.rs  character_growth.rs  cli_providers.rs  diagnostics.rs  health.rs  import_export.rs  jobs.rs  library.rs  logic.rs  mod.rs  projects.rs  prompts.rs  rag.rs  search.rs  simulation.rs  vector.rs
src-tauri/src/db/: app_state.rs  connection.rs  migrations.rs  mod.rs
src-tauri/src/domain/: axiom.rs  character.rs  entry.rs  event.rs  mod.rs  project.rs  relation.rs  shared.rs
src-tauri/src/logic/: conflict.rs  mod.rs  quickxplain.rs  repair.rs
src-tauri/src/services/: character_growth.rs  import_export.rs  jobs.rs  mod.rs  prompts.rs  rag.rs  search.rs  simulation.rs
src-tauri/src/vector/: chunking.rs  mod.rs  search.rs
src-tauri/src/windows/: credential.rs
src-tauri/tests/: ai_vector.rs  claude_cli_provider.rs  codex_cli_provider.rs  db_migrations.rs  job_queue.rs  logic_character_agent.rs  prompt_templates.rs  rag_pipeline.rs  repositories.rs  search_and_archive.rs
src/api/: ai.ts  client.ts  errors.ts  health.ts  importExport.ts  jobs.ts  library.ts  projects.ts  (+3 more)
tests/: setup.ts
(+53 files in other folders)
