[package]
name = "ameya"
version = "0.1.0"
description = "A Windows-first worldbuilding and character logic tool."
authors = ["Ameya"]
edition = "2021"

[lib]
name = "ameya_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ameya"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
anyhow = "1.0"
rusqlite = { version = "0.37", features = ["bundled", "chrono", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.9.5", features = [] }
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "macros"] }
uuid = { version = "1.23", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.23"
